Add Yandex Metrica

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ facebook_username: vmyazin
 github_username:  vmyazin
 base_img: "/assets/images/og-default.png"
 gtag_id: "G-7BXQFP488Y"
+yandex_id: "91915307"
 
 # Build settings
 theme: minima
